# bearings-rs

./: .env.example  .gitignore  AGENT_TEAM.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  RESEARCH_DIRECTIVE.md  UX.md  WHITE_PAPER.md  deploy.sh  justfile  ruff.toml
.github/workflows/: ci.yml
bearings-agent/: Cargo.toml
bearings-agent/deploy/: bearings-agent.service
bearings-agent/src/: blockfrost.rs  bluesky.rs  error.rs  main.rs  north_token.rs  supabase.rs  treasury.rs  wallet_onboarding.rs  x402.rs
bearings-backend/: ARCHITECTURE.md  Cargo.toml
bearings-backend/deploy/: bearings-backend.service
bearings-backend/src/: cache.rs  config.rs  content_tx.rs  db.rs  error.rs  i18n.rs  lib.rs  llms.rs  main.rs  mcp.rs  middleware.rs  ssr.rs  ui.rs
bearings-backend/src/repositories/: bear_future_repo.rs  campaign_repo.rs  club_repo.rs  competition_repo.rs  creator_repo.rs  digital_space_repo.rs  event_repo.rs  flag_repo.rs  future_idea_repo.rs  history_repo.rs  mod.rs  place_repo.rs  revival_repo.rs  story_repo.rs  submission_repo.rs  title_repo.rs  transparency_repo.rs  vote_repo.rs
bearings-backend/src/routes/: bear_future.rs  campaigns.rs  clubs.rs  coming_up.rs  competitions.rs  creators.rs  digital_spaces.rs  events.rs  flags.rs  future_ideas.rs  hello.rs  history.rs  ical.rs  mod.rs  now.rs  places.rs  revival.rs  stories.rs  submissions.rs  titles.rs  votes.rs
bearings-backend/src/services/: mod.rs  submission_service.rs  vote_service.rs
bearings-backend/src/ssr/: mod.rs  query.rs
bearings-backend/src/ssr/zones/: admin.rs  archive.rs  campaigns.rs  clubs.rs  coming_up.rs  creators.rs  digital.rs  events.rs  future.rs  ical.rs  mod.rs  now.rs  places.rs  shops.rs  titles.rs  transparency.rs
bearings-backend/tests/: api_tests.rs
bearings-frontend/: Cargo.toml
bearings-frontend/src/: lib.rs
bearings-frontend/src/components/: coming_up.rs  mod.rs  now.rs
bearings-shared/: Cargo.toml
bearings-shared/src/: enums.rs  lib.rs  models.rs
bearings-shared/tests/: models_test.rs
deploy/: Caddyfile  vps-setup.sh
deploy/sql/: places_nearby.sql  submissions_table.sql  user_preferences_wallet.sql  zone_functions.sql
directives/: historical_backfill.md  in_language_discovery.md  keeper.md  lineage_harvest.md
scripts/: digest.py  feed_reader.py  gen_schema.py  geo_check.py  keeper.py  link_check.py  test_digest.py  test_feed_reader.py  test_geo_check.py  test_keeper.py  test_link_check.py  translate.py
supabase/: README.md  gen_schema.sql  schema.sql
