
[workspace]
members = [
    "bearings-shared",
    "bearings-backend",
    "bearings-agent",
    # "bearings-frontend",  # Leptos frontend — added when Phase 3 begins
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bearings Steward <ursasteward@pm.me>"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (backend only)
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client — direct calls to Supabase REST API
# No ORM, no extra abstraction layer
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config / env
dotenvy = "0.15"

# URL encoding for query params
urlencoding = "2"

# Release profile — small, fast binaries for VPS deployment
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
