
[workspace]
members = [
    "bearings-shared",
    "bearings-backend",
    "bearings-agent",
    # Leptos SSR frontend — Phase 3, PARKED pending the framework decision
    # (Leptos vs Yew vs stay-HTMX; see FRONTEND_BRIEF.md). It stays a member so
    # the crate remains coherent and buildable (`cargo build -p bearings-frontend`),
    # but it is excluded from the default build set below and from CI, so an
    # unfinished stub no longer gates every build or biases the open decision.
    "bearings-frontend",
]
# Everyday `cargo build`/`test`/`clippy` (no --workspace) skip the parked stub.
default-members = [
    "bearings-shared",
    "bearings-backend",
    "bearings-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bearings Steward <ursasteward@pm.me>"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (backend only)
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client — direct calls to Supabase REST API
# No ORM, no extra abstraction layer
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config / env
dotenvy = "0.15"

# URL encoding for query params
urlencoding = "2"

# Async methods in traits (repository abstraction)
async-trait = "0.1"

# Release profile — small, fast binaries for VPS deployment
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
