
[package]
name = "bearings-agent"
version.workspace = true
edition.workspace = true

[dependencies]
bearings-shared = { path = "../bearings-shared" }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
chrono      = { workspace = true }
dotenvy     = { workspace = true }

urlencoding = { workspace = true }  # used by bluesky.rs inbox query

# and has unstable APIs. Direct HTTP is cleaner and more portable.

[[bin]]
name = "bearings-agent"
path = "src/main.rs"
