
[package]
name = "bearings-backend"
version.workspace = true
edition.workspace = true

[dependencies]
bearings-shared = { path = "../bearings-shared" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }

urlencoding = { workspace = true }  # URL-encode query params in submissions dedup check

[[bin]]
name = "bearings-backend"
path = "src/main.rs"
